<resources>
    <string name="app_name">HR Mananger</string>
    <string name="title_activity_employee">Employee</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nav_drawer__open">Open nav</string>
    <string name="nav_drawer_close">Close nav</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emptitle">Phiếu lương</string>
    <string name="empma">Mã nhân viên:</string>
    <string name="empname">Họ tên:</string>
    <string name="empluongcb">Lương cơ bản:</string>
    <string name="empngaynghi">Số ngày nghỉ:</string>
    <string name="empluongtl">Lương thực lĩnh:</string>
    <string name="date">Ngày lập:</string>
    <string name="empphongban">Phòng ban:</string>
</resources>