<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".timesheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:gravity="center"
                android:text="@string/emptitle"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="250sp"
                android:layout_height="199dp"
                android:layout_gravity="center"
                android:src="@drawable/paycheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/MaNV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:gravity="left"
                android:text="@string/empma"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/empma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TenNV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="left"
                android:text="@string/empname"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/empname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empphongban"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:gravity="left"
                android:layout_marginBottom="25sp"/>

            <Spinner
                android:id="@+id/tenPhongBan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Luongcb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="left"
                android:text="@string/empluongcb"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/empluongcb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NgayNghi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="left"
                android:text="@string/empngaynghi"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/empngaynghi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Luongtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:gravity="left"
                android:text="@string/empluongtl"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/empluongtl"
                android:layout_width="match_parent"
                android:layout_height="58dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <EditText
                android:id="@+id/editNgayLap"
                android:layout_width="288dp"
                android:layout_height="41dp"
                android:background="@drawable/border_edittext"
                android:inputType="date"
                android:textColor="#111"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:enabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/Luu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lưu" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>